<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/outline_arrow_back_24" />

    <TextView
        android:id="@+id/tv_calculo_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/calcular_autonomia_titulo"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:maxLength="10"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_calculo_titulo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:hint="@string/preco_kwh"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:maxLength="10"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/et_preco_kwh"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:hint="@string/km_percorrido"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular"
        app:layout_constraintStart_toStartOf="@+id/btn_calcular"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>